# hex_nut_m10

./: .env.example  .gitignore  CMakeLists.txt  README.md  TryCopyDll.cmake
docs/LaTeX/: .gitignore  .latexmkrc  docs.tex  refs.bib
models/: hex_nut_M10.FCStd
src/: HexNutParams.hpp  SVGExporter.hpp  main.cpp
